# Literature-based

./: .gitattributes  .gitignore  DATA.md  DECISIONS.md  README.md  REPORT.md  VALIDATION.md  pyproject.toml  requirements.txt
config/: default.json
lbd/: __init__.py  cascade.py  cli.py  config.py  discovery.py  embeddings.py  europepmc.py  eutils.py  mesh_tree.py  output.py  pipeline.py  report.py  scoring.py  validation.py
